changes in home page

--- a/index.html
+++ b/index.html
@@ -1,36 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>mobile-gigs</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="main-container">
 
-            <div class="banner">
-                <div class="inner-container">
-                    <div class="header-contact">
-                        <h1 class="logo">
-                            <a href="#">
-                                Mobile Gigs
-                            </a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>mobile-gigs</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="main-container">
+
+        <div class="banner">
+            <div class="inner-container">
+                <div class="header-contact">
+                    <h1 class="logo">
+                        <a href="#">
+                            Mobile Gigs
+                        </a>
+                    </h1>
+                    <div>
+                        <button>OVERVIEW</button>
+                        <button>CONTACT US</button>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h1>
+                            Welcome to the
+                            <span>Mobile Gigs</span>
+                            Nomad Community
                         </h1>
+                        <div>
+
+                        </div>
+                    </div>
+                    <div>
+                        <img src="" alt="">
                     </div>
                 </div>
             </div>
-
-            <div class="content">
-                
-            </div>
-
-            <footer>
-
-            </footer>
-
         </div>
-    </body>
+
+        <div class="content">
+            <div>
+                <button>VERIFY ACCOUNT</button>
+            </div>
+            <div>
+                <h3>
+                    Find mobile gigs on :
+                </h3>
+                <div>
+
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <div>
+                <div>
+                    <h2>Get in Touch</h2>
+                </div>
+                <div>
+                    <i></i>
+                    <span></span>
+                </div>
+                <div>
+                    <i></i>
+                    <span></span>
+                </div>
+            </div>
+            <div>
+                <p>
+                    Don't want to receive these E-mails? Unsubscribe
+                </p>
+            </div>
+        </footer>
+
+    </div>
+</body>
+
 </html>
