almost done few changes left in footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>mobile-gigs</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700;900&family=Poppins:wght@300;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -15,67 +18,77 @@
 
         <div class="banner">
             <div class="inner-container">
-                <div class="header-contact">
+                <div class="header-content">
                     <h1 class="logo">
                         <a href="#">
                             Mobile Gigs
                         </a>
                     </h1>
-                    <div>
+                    <div class="contact-btn">
                         <button>OVERVIEW</button>
                         <button>CONTACT US</button>
                     </div>
                 </div>
-                <div>
-                    <div>
+                <div class="banner-content">
+                    <div class="banner-title">
                         <h1>
                             Welcome to the
                             <span>Mobile Gigs</span>
                             Nomad Community
                         </h1>
-                        <div>
-
+                        <div class="playstore-btn">
+                            <a href="#">
+                                <img src="./images/appstore.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./images/googleplay.png" alt="">
+                            </a>
                         </div>
                     </div>
-                    <div>
-                        <img src="" alt="">
+                    <img src="images/mobile-img.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="middle-content">
+            <div class="inner-container">
+                <div class="verify-btn">
+                    <button>VERIFY ACCOUNT</button>
+                </div>
+            </div>
+            <div class="find-mobile">
+                <div class="inner-container mg-grid">
+                    <h3>
+                        Find mobile gigs on :
+                    </h3>
+                    <div class="playstore-btn">
+                        <a href="#"> <img src="./images/googleplay.png" alt=""></a>
+                        <a href="#"> <img src="./images/appstore.png" alt=""></a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="content">
-            <div>
-                <button>VERIFY ACCOUNT</button>
-            </div>
-            <div>
-                <h3>
-                    Find mobile gigs on :
-                </h3>
-                <div>
-
-                </div>
-            </div>
-        </div>
-
         <footer>
-            <div>
-                <div>
-                    <h2>Get in Touch</h2>
+            <div class="inner-container">
+                <div class="footer-content">
+                    <div class="footer-info">
+                        <h2>Get in Touch</h2>
+                        <div class="">
+                            <a href="#"> <img src="images/mail.svg" alt="" srcset=""></a>
+                            <span> info@mobile-gigs.com</span>
+                        </div>
+                        <div>
+                            <a href="#"> <img src="images/location.svg" alt="" srcset=""></a>
+                            <span> Wildwood Flowers, LLC.
+                                Phoenix, Arizona 85044</span>
+                        </div>
+                    </div>
+                    <div class="footer-description">
+                        <p>
+                            Don't want to receive these E-mails? Unsubscribe
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <i></i>
-                    <span></span>
-                </div>
-                <div>
-                    <i></i>
-                    <span></span>
-                </div>
-            </div>
-            <div>
-                <p>
-                    Don't want to receive these E-mails? Unsubscribe
-                </p>
             </div>
         </footer>
 
