--- a/index.html
+++ b/index.html
@@ -17,47 +17,48 @@
     <div class="main-container">
 
         <div class="banner">
-            <div class="inner-container">
-                <div class="header-content">
-                    <h1 class="logo">
-                        <a href="#">
-                            Mobile Gigs
-                        </a>
+
+            <div class="header-content">
+                <h1 class="logo">
+                    <a href="#">
+                        Mobile Gigs
+                    </a>
+                </h1>
+                <div class="contact-btn">
+                    <button>OVERVIEW</button>
+                    <button>CONTACT US</button>
+                </div>
+            </div>
+            <div class="banner-content">
+                <div class="banner-title">
+                    <h1>
+                        Welcome to the
+                        <span>Mobile Gigs</span>
+                        Nomad Community
                     </h1>
-                    <div class="contact-btn">
-                        <button>OVERVIEW</button>
-                        <button>CONTACT US</button>
+                    <div class="playstore-btn">
+                        <a href="#">
+                            <img src="./images/appstore.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="./images/googleplay.png" alt="">
+                        </a>
                     </div>
                 </div>
-                <div class="banner-content">
-                    <div class="banner-title">
-                        <h1>
-                            Welcome to the
-                            <span>Mobile Gigs</span>
-                            Nomad Community
-                        </h1>
-                        <div class="playstore-btn">
-                            <a href="#">
-                                <img src="./images/appstore.png" alt="">
-                            </a>
-                            <a href="#">
-                                <img src="./images/googleplay.png" alt="">
-                            </a>
-                        </div>
-                    </div>
+                <div class=" mob-img">
                     <img src="images/mobile-img.png" alt="">
                 </div>
             </div>
         </div>
 
         <div class="middle-content">
-            <div class="inner-container">
-                <div class="verify-btn">
-                    <button>VERIFY ACCOUNT</button>
-                </div>
+
+            <div class="verify-btn">
+                <button>VERIFY ACCOUNT</button>
             </div>
+
             <div class="find-mobile">
-                <div class="inner-container mg-grid">
+                <div class="m-grid">
                     <h3>
                         Find mobile gigs on :
                     </h3>
@@ -69,27 +70,25 @@
             </div>
         </div>
         <footer>
-            <div class="inner-container">
-                <div class="footer-content">
-                    <div class="footer-info">
-                        <h2>Get in Touch</h2>
-                        <div class="">
-                            <a href="#"> <img src="images/mail.svg" alt="" srcset=""></a>
-                            <span> info@mobile-gigs.com</span>
-                        </div>
-                        <div>
-                            <a href="#"> <img src="images/location.svg" alt="" srcset=""></a>
-                            <span> Wildwood Flowers, LLC.
-                                Phoenix, Arizona 85044</span>
-                        </div>
+
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h2>Get in Touch</h2>
+                    <div class="footer-address">
+                        <a href="#"> <img src="images/mail.svg" alt="" srcset=""></a>
+                        <span class="mail-address"> info@mobile-gigs.com</span>
                     </div>
-                    <div class="footer-description">
-                        <p>
-                            Don't want to receive these E-mails? Unsubscribe
-                        </p>
+                    <div class="footer-address">
+                        <a href="#" class=""> <img src="images/location.svg" alt="" srcset=""></a>
+                        <p> Wildwood Flowers, LLC.
+                            Phoenix, Arizona 85044</p>
                     </div>
                 </div>
+                <p>
+                    Don't want to receive these E-mails? Unsubscribe
+                </p>
             </div>
+
         </footer>
 
     </div>
