tablet responsive done

--- a/index.html
+++ b/index.html
@@ -5,30 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mobile-gigs</title>
+    <title>Mobile Gigs</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;700;900&family=Poppins:wght@300;600;700&display=swap"
-        rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&family=Raleway:wght@100&display=swap" rel="stylesheet">    
 </head>
 
 <body>
     <div class="main-container">
-
         <div class="banner">
-
-            <div class="header-content">
+            <header>
                 <h1 class="logo">
-                    <a href="#">
-                        Mobile Gigs
-                    </a>
+                    <a href="#">Mobile Gigs</a>
                 </h1>
-                <div class="contact-btn">
+                
+                <div class="header-buttons">
                     <button>OVERVIEW</button>
                     <button>CONTACT US</button>
                 </div>
-            </div>
+            </header>
+
             <div class="banner-content">
                 <div class="banner-title">
                     <h1>
@@ -36,7 +33,7 @@
                         <span>Mobile Gigs</span>
                         Nomad Community
                     </h1>
-                    <div class="playstore-btn">
+                    <div class="store-buttons">
                         <a href="#">
                             <img src="./images/appstore.png" alt="">
                         </a>
@@ -52,7 +49,6 @@
         </div>
 
         <div class="middle-content">
-
             <div class="verify-btn">
                 <button>VERIFY ACCOUNT</button>
             </div>
@@ -62,33 +58,30 @@
                     <h3>
                         Find mobile gigs on :
                     </h3>
-                    <div class="playstore-btn">
+                    <div class="store-buttons">
                         <a href="#"> <img src="./images/googleplay.png" alt=""></a>
                         <a href="#"> <img src="./images/appstore.png" alt=""></a>
                     </div>
                 </div>
             </div>
         </div>
+
         <footer>
+            <h2>Get in Touch</h2>
 
-            <div class="footer-content">
-                <div class="footer-info">
-                    <h2>Get in Touch</h2>
-                    <div class="footer-address">
-                        <a href="#"> <img src="images/mail.svg" alt="" srcset=""></a>
-                        <span class="mail-address"> info@mobile-gigs.com</span>
-                    </div>
-                    <div class="footer-address">
-                        <a href="#" class=""> <img src="images/location.svg" alt="" srcset=""></a>
-                        <p> Wildwood Flowers, LLC.
-                            Phoenix, Arizona 85044</p>
-                    </div>
-                </div>
-                <p>
-                    Don't want to receive these E-mails? Unsubscribe
-                </p>
-            </div>
+            <ul>
+                <li>
+                    <img src="images/mail.svg" alt="">
+                    info@mobile-gigs.com
+                </li>
 
+                <li>
+                    <img src="images/location.svg" alt="">
+                    Wildwood Flowers, LLC. Phoenix, Arizona 85044
+                </li>
+            </ul>
+
+            <p>Don't want to receive these E-mails? Unsubscribe</p>
         </footer>
 
     </div>
